css/custom.css
*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    font-size: 62.5%;
    scroll-behavior: smooth;
}

body {
    font-size: 1.6rem;
    font-family: "Chakra Petch", sans-serif;
}

[id] {
    scroll-margin-top: 71.5px;
}

@media (min-width: 992px) {
    [id] {
        scroll-margin-top: 67px;
    }
}

.hero-shadow {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0);
    z-index: -1;
}

.logo {
    width: 80px;
}

.nav-link,
.navbar-toggler-icon {
    font-size: 1.8rem;
    text-transform: uppercase;
}

.navbar-toggler {
    padding: 0.5em 1em;
}

.home {
    position: relative;
    height: 100vh;
    background-image: url("../img/photos/Hero-image.jpg");
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    z-index: 0;
}

.home .btn {
    padding: 1em 2em;
    font-size: 1.4rem;
    text-transform: uppercase;
}

.accordion-button {
    padding: 1em;
    font-size: 1.8rem;
}

.event {
    background-color: rgb(248, 248, 248);
}

.event .card-img-top {
    height: 250px;
    object-fit: cover;
}

.event .card-title {
    font-size: 2rem;
    padding: 1em;
    font-weight: bold;
}

.contact h3 {
    font-size: 2rem;
    font-weight: bold;
    text-transform: uppercase;
}

.contact .submit-btn {
    font-size: 1.6rem;
}

textarea.form-control,
input.form-control {
    font-size: 1.4rem;
}

.contact-info {
    padding-top: 1em;
}

.event-boxes a {
    text-transform: uppercase;
    color: black;
}

.links {
    font-size: 1.6rem;
    text-decoration: none;
    color: white;
    padding-top: 1em;
}

.event-links {
    font-size: 1.6rem;
    text-decoration: none;
    color: black;
    padding-top: 1em;
}

.social-media {
    color: white;
    font-size: 2.5rem;
    padding: 10px;
}

.contact-info a:hover,
.card-title a:hover,
.event-link:hover {
    color: rgb(16, 104, 237);
}

.gallery-btn {
    display: inline-block;
    padding: 15px 25px;
    margin-top: 50px;
    font-size: 18px;
    color: #fff;
    background-color: #007bff;
    border: none;
    border-radius: 5px;
    text-decoration: none;
    cursor: pointer;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}
.gallery-btn:hover {
    background-color: #0056b3;
}

.gallery {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 20px;
    justify-items: center; /* Dodaj to, aby wyśrodkować zdjęcia */
    margin-top: 100px;
    padding: 20px;
    background-color: #f4f4f4;
}

.gallery img {
    width: 200px; /* Szerokość w pikselach */
    height: 200px; /* Wysokość w pikselach */
    object-fit: cover; /* Dopasowanie zawartości bez zniekształceń */
    border-radius: 8px; /* Opcjonalne: zaokrąglone rogi */
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Opcjonalne: cień */
    margin: 10px; /* Odstęp między obrazami */
    cursor: pointer; /* Wskaźnik jako dłoń */
}

/* Styl dla modala */
.modal {
    display: flex;
    z-index: 1000;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.8);
    opacity: 0;
    transition: opacity 0.3s ease-in-out;
}
.modal[style*="display: block"] {
    opacity: 1; /* Pokaż modal z animacją */
}

.modal-content {
    top: 50%;
    transform: translate(0%, -50%);
    object-fit: contain; /* Zachowuje proporcje zdjęcia */
    max-width: 80%; /* Ogranicza szerokość zdjęcia */
    max-height: 80%; /* Ogranicza wysokość zdjęcia */
    background-color: transparent;
    box-shadow: none;
}

.close {
    position: absolute;
    top: 20px;
    right: 35px;
    color: white;
    font-size: 40px;
    font-weight: bold;
    cursor: pointer;
}

.close:hover,
.close:focus {
    color: #ccc;
    text-decoration: none;
    cursor: pointer;
}

#caption {
    text-align: center;
    color: white;
    padding: 10px;
    font-size: 18px;
}

.navigation {
    position: absolute;
    top: 50%;
    width: 100%;
    display: flex;
    justify-content: space-between;
    transform: translateY(-50%);
}

.prev,
.next {
    color: white;
    font-size: 40px;
    font-weight: bold;
    cursor: pointer;
    user-select: none;
    padding: 0 20px;
}

.prev:hover,
.next:hover {
    color: #ccc;
}

.arrow {
    animation: blink 1s infinite;
}

.form {
    background-color: #f8f9fa; /* Kolor tła dla całej sekcji */
    padding: 40px 0; /* Góra i dół sekcji */
}

.form form {
    max-width: 600px; /* Maksymalna szerokość formularza */
    margin: 0 auto; /* Wyśrodkowanie formularza */
    padding: 20px; /* Wewnętrzne odstępy */
    background-color: #ffffff; /* Kolor tła tylko formularza */
    border-radius: 8px; /* Zaokrąglone rogi formularza */
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Opcjonalny cień */
}

/* Wyśrodkowanie tytułu */
.form h2 {
    text-align: center; /* Wyśrodkowanie tytułu */
    color: #333;
    font-weight: bold;
    text-transform: uppercase;
    margin-bottom: 20px;
}

/* Wyrównanie pozostałych elementów do lewej */
.form .form-label,
.form .form-control {
    text-align: left; /* Wyrównanie etykiet i zawartości do lewej */
}

/* Odstępy dla spójnego układu */
.form .mb-3 {
    text-align: left; /* Wyrównanie kontenerów pól formularza */
}

.form h2 {
    color: #333;
    font-weight: bold;
    text-transform: uppercase;
    margin-bottom: 20px;
}

.form .form-label {
    font-size: 1.6rem;
    font-weight: 500;
}

.form .form-control {
    font-size: 1.4rem;
    padding: 10px;
    margin-bottom: 15px;
}

.form .btn {
    font-size: 1.6rem;
    padding: 10px 20px;
}

.privacy-policy {
    margin-top: 20px;
}

.newsletter {
    margin: 0 auto;
    max-width: 600px; /* Maksymalna szerokość formularza */
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

@media (max-width: 768px) {
    .home {
        background-image: url("../img/photos/hero_image-mobile.jpg");
        background-size: cover;
        background-position: center;
        background-attachment: scroll;
        min-height: 100vh;
    }

    .hero-shadow {
        background-color: rgba(0, 0, 0, 0.4);
    }
    .event .card-img-top {
        height: 100%;
    }
}

@keyframes blink {
    0%,
    100% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
}

